<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_nueva"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="itsco.edu.contactos.nuevaActivity">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="14dp"
        android:id="@+id/txt_nom"
        android:layout_alignParentEnd="true"
        android:hint="@string/hint_nombre"
        tools:textSize="18sp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:layout_below="@+id/txt_nom"
        android:layout_alignParentStart="true"
        android:layout_marginTop="29dp"
        android:id="@+id/txt_num"
        android:layout_alignParentEnd="true"
        android:hint="@string/hint_numero" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:layout_below="@+id/txt_num"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"
        android:id="@+id/txt_email"
        android:layout_alignParentEnd="true"
        android:hint="@string/hint_email" />

    <Button
        android:text="@string/btn_cancelar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_cancelar"
        android:layout_alignBaseline="@+id/btn_guardar"
        android:layout_alignBottom="@+id/btn_guardar"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="45dp"
        android:background="@color/colorAccent"
        android:textSize="18sp" />

    <Button
        android:text="@string/btn_guardar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_guardar"
        android:layout_marginEnd="37dp"
        android:layout_marginTop="69dp"
        android:layout_below="@+id/txt_email"
        android:layout_toStartOf="@+id/btn_cancelar"
        android:background="@color/colorAccent"
        tools:textSize="18sp" />

</RelativeLayout>
